# ardor-desktop

./: .gitignore  .gitleaks.toml  .releaserc.json  CHANGELOG.md  LICENSE  README.md  SECURITY.md  VERSION.md  desktop-ui-requirements.json  package.json
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-ard-2441-macos.yml  build-desktop-apps.yml  bundled-ui.yml  ci.yml  pr-title.yml  release.yml  sync-solutions-ui.yml
docs/: build-channels.md  desktop-prototype.md
docs/superpowers/plans/: 2026-07-23-macos-metal-compositor.md
docs/superpowers/specs/: 2026-07-23-macos-metal-compositor-design.md
docs/testing/: macos-metal-compositor.md
env/: prod.env.example  solutions-ui-release-trigger.md  solutions-ui.ref  stage1.env
scripts/: build-windows-installer.mjs  cef-build-env.mjs  cef-build-env.test.mjs  generate-update-manifest.mjs  generate-update-manifest.test.mjs  macos-metal-contract.test.mjs  macos-metal-windowserver.test.mjs  prepare-windows-bootstrap.mjs  release-security.test.mjs  run-cef-cargo.mjs  run-tauri.mjs  run-ui.mjs  solutions-ui-path.mjs  sync-version.mjs  verify-desktop-ui-contract.mjs  verify-desktop-ui-contract.test.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.prod-debug.conf.json  tauri.prod.conf.json  tauri.stage1.conf.json  tauri.updater-artifacts.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-stage/: icon.icns
src-tauri/permissions/autogenerated/: close_sidebar_browser.toml  complete_auth_callback.toml  control_sidebar_browser.toml  get_auth_callback_status.toml  get_pending_auth_callback.toml  input_sidebar_browser.toml  install_desktop_update.toml  layout_sidebar_browser.toml  open_auth_url.toml  open_sidebar_browser.toml
src-tauri/src/: auth_callback_page.html  lib.rs  main.rs  runtime.rs  sidebar_browser.rs  windows_crash_diagnostics.rs
src-tauri/src/sidebar_browser/: macos_child.rs  windows_composition.rs  windows_gpu_compositor.rs
src-tauri/src/sidebar_browser/gpu_compositor/: geometry.rs  mod.rs  renderer.rs  scheduler.rs  test_support.rs
src-tauri/src/sidebar_browser/gpu_compositor/input/: macos.rs  mod.rs  windows.rs
src-tauri/src/sidebar_browser/gpu_compositor/texture_import/: macos.rs  mod.rs  windows.rs
src-tauri/src/sidebar_browser/windows_gpu_compositor/: texture_import.rs
src-tauri/tests/: macos_metal_windowserver.rs
