[package]
name = "ardor-solutions-desktop"
version = "0.3.7"
description = "Native desktop runtime for Ardor"
edition = "2021"
rust-version = "1.88.0"
license-file = "../LICENSE"
repository = "https://github.com/Ardor-Cerebrum/ardor-desktop"

[lib]
name = "ardor_solutions_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
getrandom = "0.3"
minisign-verify = "0.2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "~2.11.5", features = ["devtools", "unstable"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
time = "=0.3.47"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "=0.6.4", default-features = false, features = ["std"] }
objc2-app-kit = { version = "=0.3.2", default-features = false, features = ["std", "NSResponder", "NSView", "objc2-quartz-core"] }
objc2-core-graphics = { version = "=0.3.2", default-features = false, features = ["std", "objc2", "CGPath"] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = ["std", "NSArray", "NSEnumerator", "NSGeometry"] }
objc2-quartz-core = { version = "=0.3.2", default-features = false, features = ["std", "CALayer", "CAShapeLayer", "CATransaction", "objc2-core-graphics"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "=0.38.2"
windows = { version = "=0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
